[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle-invest"
version = "0.1.0"
description = "US large-cap turtle strategy portfolio automation with approval workflow."
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
turtle-invest = "turtle_invest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
